feat: Add links to controler, data and function files

--- a/category.html
+++ b/category.html
@@ -141,11 +141,13 @@
                 <form action="#">
                   <ul>
                     <li class="filter-list">
-                      <input class="pixel-radio" type="radio" id="men" name="brand" /><label for="men">Alimentación<span>
+                      <input class="pixel-radio" type="radio" id="men" name="brand" /><label
+                        for="men">Alimentación<span>
                           (3789)</span></label>
                     </li>
                     <li class="filter-list">
-                      <input class="pixel-radio" type="radio" id="women" name="brand" /><label for="women">Belleza y salud<span>
+                      <input class="pixel-radio" type="radio" id="women" name="brand" /><label for="women">Belleza y
+                        salud<span>
                           (4069)</span></label>
                     </li>
                     <li class="filter-list">
@@ -157,7 +159,8 @@
                         for="footwear">Hogar<span> (5290)</span></label>
                     </li>
                     <li class="filter-list">
-                      <input class="pixel-radio" type="radio" id="bayItem" name="brand" /><label for="bayItem">Bricolage<span> (1463)</span></label>
+                      <input class="pixel-radio" type="radio" id="bayItem" name="brand" /><label
+                        for="bayItem">Bricolage<span> (1463)</span></label>
                     </li>
                     <!-- <li class="filter-list">
                       <input class="pixel-radio" type="radio" id="electronics" name="brand" /><label
@@ -214,7 +217,8 @@
                       for="balckleather">Rojo<span>(29)</span></label>
                   </li>
                   <li class="filter-list">
-                    <input class="pixel-radio" type="radio" id="blackred" name="color" /><label for="blackred">Blanco<span>(82)</span></label>
+                    <input class="pixel-radio" type="radio" id="blackred" name="color" /><label
+                      for="blackred">Blanco<span>(82)</span></label>
                   </li>
                   <li class="filter-list">
                     <input class="pixel-radio" type="radio" id="gold" name="color" /><label
@@ -254,7 +258,7 @@
               </select>
             </div>
             <div class="sorting mr-auto">
-             <select>
+              <select>
                 <option value="1">Muestra 10 productos</option>
                 <option value="1">Muestra 20 productos</option>
                 <option value="1">Muestra 50 productos</option>
@@ -760,6 +764,9 @@
   <script src="vendors/jquery.ajaxchimp.min.js"></script>
   <script src="vendors/mail-script.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/functions.js"></script>
+  <script src="js/productos.js"></script>
+  <script src="js/controlador.js"></script>
 </body>
 
 </html>
