--- a/checkout.html
+++ b/checkout.html
@@ -137,12 +137,14 @@
         <div class="check_title">
           <h2>Cliente frecuente? <a href="#">Inicia sesión</a></h2>
         </div>
-        <p>Si has comprado anteriormente con nosotros, escribe tus credenciales para iniciar sesión. Si eres un cliente nuevo procede por favor al registro de compra en la sección de envío y facturación.
+        <p>Si has comprado anteriormente con nosotros, escribe tus credenciales para iniciar sesión. Si eres un cliente
+          nuevo procede por favor al registro de compra en la sección de envío y facturación.
         </p>
         <form class="row contact_form" action="#" method="post" novalidate="novalidate">
           <div class="col-md-6 form-group p_star">
-            <input type="text" class="form-control" placeholder="Email o nombre de usuario*" onfocus="this.placeholder=''"
-              onblur="this.placeholder = 'Email o nombre de usuario*'" id="name" name="name" />
+            <input type="text" class="form-control" placeholder="Email o nombre de usuario*"
+              onfocus="this.placeholder=''" onblur="this.placeholder = 'Email o nombre de usuario*'" id="name"
+              name="name" />
             <!-- <span class="placeholder" data-placeholder="Username or Email"></span> -->
           </div>
           <div class="col-md-6 form-group p_star">
@@ -185,7 +187,8 @@
                 <span class="placeholder" data-placeholder="Last name"></span>
               </div>
               <div class="col-md-12 form-group">
-                <input type="text" class="form-control" id="company" name="company" placeholder="Nombre de la compañia" />
+                <input type="text" class="form-control" id="company" name="company"
+                  placeholder="Nombre de la compañia" />
               </div>
               <div class="col-md-6 form-group p_star">
                 <input type="text" class="form-control" id="number" name="number" />
@@ -281,7 +284,8 @@
                   <div class="check"></div>
                 </div>
                 <p>
-                  Por favor verifica el nombre de la tienda, dirección, pueblo, región/condado, código postal de la tienda.
+                  Por favor verifica el nombre de la tienda, dirección, pueblo, región/condado, código postal de la
+                  tienda.
                 </p>
               </div>
               <div class="payment_item active">
@@ -292,7 +296,8 @@
                   <div class="check"></div>
                 </div>
                 <p>
-                  Pago via PayPal: puedes realizar tu pago con este servicio o con tu tarjeta de crédito si no tienes cuenta de Paypal.
+                  Pago via PayPal: puedes realizar tu pago con este servicio o con tu tarjeta de crédito si no tienes
+                  cuenta de Paypal.
                 </p>
               </div>
               <div class="creat_account">
@@ -415,6 +420,9 @@
   <script src="vendors/jquery.ajaxchimp.min.js"></script>
   <script src="vendors/mail-script.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/functions.js"></script>
+  <script src="js/productos.js"></script>
+  <script src="js/controlador.js"></script>
 </body>
 
 </html>
