--- a/confirmation.html
+++ b/confirmation.html
@@ -303,7 +303,7 @@
               <p>
                 Los mejores productos a los mejores precios, es nuestro lema y todo en solo 48 horas!
               </p>
-              
+
               <p></p>
             </div>
           </div>
@@ -395,6 +395,9 @@
   <script src="vendors/jquery.ajaxchimp.min.js"></script>
   <script src="vendors/mail-script.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/functions.js"></script>
+  <script src="js/productos.js"></script>
+  <script src="js/controlador.js"></script>
 </body>
 
 </html>
