--- a/contact.html
+++ b/contact.html
@@ -206,7 +206,7 @@
             </div>
             <div class="form-group text-center text-md-right mt-3">
               <button type="submit" class="button button--active button-contactForm">
-               Enviar Mensaje
+                Enviar Mensaje
               </button>
             </div>
           </form>
@@ -227,7 +227,7 @@
               <p>
                 Los mejores productos a los mejores precios, es nuestro lema y todo en solo 48 horas!
               </p>
-             
+
               <p> </p>
             </div>
           </div>
@@ -322,6 +322,9 @@
   <script src="vendors/jquery.ajaxchimp.min.js"></script>
   <script src="vendors/mail-script.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/functions.js"></script>
+  <script src="js/productos.js"></script>
+  <script src="js/controlador.js"></script>
 </body>
 
 </html>
