--- a/login.html
+++ b/login.html
@@ -120,7 +120,7 @@
             <ol class="breadcrumb">
               <li class="breadcrumb-item"><a href="#">Inicio</a></li>
               <li class="breadcrumb-item active" aria-current="page">
-              Tu cuenta
+                Tu cuenta
               </li>
             </ol>
           </nav>
@@ -189,7 +189,7 @@
               <p>
                 Los mejores productos a los mejores precios, es nuestro lema y todo en solo 48 horas!
               </p>
-         
+
               <p> </p>
             </div>
           </div>
@@ -281,6 +281,9 @@
   <script src="vendors/jquery.ajaxchimp.min.js"></script>
   <script src="vendors/mail-script.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/functions.js"></script>
+  <script src="js/productos.js"></script>
+  <script src="js/controlador.js"></script>
 </body>
 
 </html>
