--- a/single-blog.html
+++ b/single-blog.html
@@ -177,10 +177,25 @@
                 estar en algún área aislada nunca está de más un pequeño botiquín ;).
               </p>
               <p>
-                Siempre es bueno llevar una pequeña mochila para acarrear algunos bártulos imprescindibles. ¿Qué suelo llevar yo en ella? Pues un poco de todo. Dependiendo de la duración de la salida es fundamental llevar agua suficiente. Y también comida, que pocas veces un bocadillo sabe tan delicioso como en medio del campo. Mi guía de aves viene conmigo allá donde voy, incluso si no es una salida específica para avistar pájaros. Además meto siempre una navaja, algo de ropa de recambio (en caso de caídas al río, charcos, peleas con una zarza… :P), una libreta para notas con un bolígrafo y un lápiz. Si hay posibilidad de que me pille la noche suelo llevar también una linterna frontal y algunas pilas de repuesto (de hecho, suele ir siempre en la mochila). La navaja para mí es una herramienta fundamental. No sólo porque me encantan los embutidos y no suelo llevarlos en lonchas, sino porque te puede sacar de un buen apuro. Antes solía ir con una navaja multiusos que traía un sacacorchos, una pequeña sierra y la hoja de la navaja. Pero hace poco me regalaron una maravillosa de la cual ya nunca me separo cuando hago alguna salida campestre.
+                Siempre es bueno llevar una pequeña mochila para acarrear algunos bártulos imprescindibles. ¿Qué suelo
+                llevar yo en ella? Pues un poco de todo. Dependiendo de la duración de la salida es fundamental llevar
+                agua suficiente. Y también comida, que pocas veces un bocadillo sabe tan delicioso como en medio del
+                campo. Mi guía de aves viene conmigo allá donde voy, incluso si no es una salida específica para avistar
+                pájaros. Además meto siempre una navaja, algo de ropa de recambio (en caso de caídas al río, charcos,
+                peleas con una zarza… :P), una libreta para notas con un bolígrafo y un lápiz. Si hay posibilidad de que
+                me pille la noche suelo llevar también una linterna frontal y algunas pilas de repuesto (de hecho, suele
+                ir siempre en la mochila). La navaja para mí es una herramienta fundamental. No sólo porque me encantan
+                los embutidos y no suelo llevarlos en lonchas, sino porque te puede sacar de un buen apuro. Antes solía
+                ir con una navaja multiusos que traía un sacacorchos, una pequeña sierra y la hoja de la navaja. Pero
+                hace poco me regalaron una maravillosa de la cual ya nunca me separo cuando hago alguna salida
+                campestre.
               </p>
               <p>
-                Respecto a la linterna frontal, yo la prefiero a la de mano, ya que así tengo mayor libertad de movimiento. La mía es bastante corriente. Pero todo depende de lo que quieras y necesites. Es interesante que sea de leds, ya que consume menos y duran más que las bombillas tradicionales. También es bueno que puedas regular la intensidad de la luz, pues no siempre la vas a necesitar a plena potencia.
+                Respecto a la linterna frontal, yo la prefiero a la de mano, ya que así tengo mayor libertad de
+                movimiento. La mía es bastante corriente. Pero todo depende de lo que quieras y necesites. Es
+                interesante que sea de leds, ya que consume menos y duran más que las bombillas tradicionales. También
+                es bueno que puedas regular la intensidad de la luz, pues no siempre la vas a necesitar a plena
+                potencia.
               </p>
             </div>
             <div class="col-lg-12">
@@ -199,7 +214,8 @@
                     Siempre estamos buscando las nuevas tendencias para ti!
                   </p>
                   <p>
-                    Inscríbete a nuestro blog y a nuestro newsletter y no te pierdas ninguna novedad, ya que nuestras ofertas solo duran 48 horas!!  
+                    Inscríbete a nuestro blog y a nuestro newsletter y no te pierdas ninguna novedad, ya que nuestras
+                    ofertas solo duran 48 horas!!
                   </p>
                 </div>
               </div>
@@ -278,7 +294,7 @@
                     <h5>
                       <a href="#">Elsa Martinez</a>
                     </h5>
-                    <p class="date">hoy  </p>
+                    <p class="date">hoy </p>
                     <p class="comment">
                       Cuando salen a la venta en vuestra web tejanos?
                     </p>
@@ -301,7 +317,7 @@
                     </h5>
                     <p class="date">hace dos días </p>
                     <p class="comment">
-                      Me gusta el articulo del equipamiento en el campo. 
+                      Me gusta el articulo del equipamiento en el campo.
                     </p>
                   </div>
                 </div>
@@ -411,7 +427,9 @@
                 </a>
               </div>
               <p>
-                Bienvenido a nuestro blog.  Cada día actualizamos contenido, pero no cualquier contenido, sino lo que te interesa a ti.  Siguenos y suscribete a nuestro newsletter para estar al día y recibir ofertas especiales.  
+                Bienvenido a nuestro blog. Cada día actualizamos contenido, pero no cualquier contenido, sino lo que te
+                interesa a ti. Siguenos y suscribete a nuestro newsletter para estar al día y recibir ofertas
+                especiales.
               </p>
               <div class="br"></div>
             </aside>
@@ -578,7 +596,7 @@
   <!--================Blog Area =================-->
 
 
-<!--================Instagram Area =================-->
+  <!--================Instagram Area =================-->
   <!-- <section class="instagram_area">
     <div class="container box_1620">
       <div class="insta_btn">
@@ -588,7 +606,7 @@
   <!-- ================ end banner area ================= -->
 
   <!--================Blog Area =================-->
- <!--  <section class="blog_area single-post-area py-80px section-margin--small">
+  <!--  <section class="blog_area single-post-area py-80px section-margin--small">
     <div class="container">
       <div class="row">
         <div class="col-lg-8 posts-list">
@@ -884,7 +902,7 @@
                 </span>
               </div>
               <!-- /input-group -->
-             <!--  <div class="br"></div>
+  <!--  <div class="br"></div>
             </aside>
             <aside class="single_sidebar_widget author_widget">
               <img class="author_img rounded-circle" src="img/blog/author.png" alt="" />
@@ -1073,7 +1091,7 @@
       </div>
     </div>
   </section> -->
-  <!--================Blog Area =================--> 
+  <!--================Blog Area =================-->
 
   <!--================Instagram Area =================-->
   <section class="instagram_area">
@@ -1197,6 +1215,9 @@
   <script src="vendors/jquery.ajaxchimp.min.js"></script>
   <script src="vendors/mail-script.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/functions.js"></script>
+  <script src="js/productos.js"></script>
+  <script src="js/controlador.js"></script>
 </body>
 
 </html>
