--- a/single-product.html
+++ b/single-product.html
@@ -308,7 +308,7 @@
                     </div>
                   </div>
                   <p>
-                    Compré este reloj y me encanta.  Lo recomendaría al 100%.  
+                    Compré este reloj y me encanta. Lo recomendaría al 100%.
                   </p>
                 </div>
                 <div class="review_item reply">
@@ -323,7 +323,7 @@
                     </div>
                   </div>
                   <p>
-                   Me gustaron mucho las funcionalidades del reloj y sobretodo el precio.  Buena relación calidad-precio
+                    Me gustaron mucho las funcionalidades del reloj y sobretodo el precio. Buena relación calidad-precio
                   </p>
                 </div>
                 <div class="review_item">
@@ -338,7 +338,8 @@
                     </div>
                   </div>
                   <p>
-                    Me encantan los relojes, este reloj no está hecho en México pero es de buena calidad.  También me gustó mucho la facilidad de compra de esta página web. 
+                    Me encantan los relojes, este reloj no está hecho en México pero es de buena calidad. También me
+                    gustó mucho la facilidad de compra de esta página web.
                   </p>
                 </div>
               </div>
@@ -434,7 +435,7 @@
                     </div>
                   </div>
                   <p>
-                    Me encantó este -Smartwatch tiene una magnifica relación calidad-precio. 
+                    Me encantó este -Smartwatch tiene una magnifica relación calidad-precio.
                   </p>
                 </div>
                 <div class="review_item">
@@ -452,7 +453,7 @@
                     </div>
                   </div>
                   <p>
-                   El reloj es bastante asequible y tiene muy buenas funcionalidades! Lo recomendaría sin dudarlo.
+                    El reloj es bastante asequible y tiene muy buenas funcionalidades! Lo recomendaría sin dudarlo.
                   </p>
                 </div>
                 <div class="review_item">
@@ -470,7 +471,7 @@
                     </div>
                   </div>
                   <p>
-                   En mis tiempos no había smartwatches como ahora, me lo regaló mi nieto y estoy encantado. 
+                    En mis tiempos no había smartwatches como ahora, me lo regaló mi nieto y estoy encantado.
                   </p>
                 </div>
               </div>
@@ -746,6 +747,9 @@
   <script src="vendors/jquery.ajaxchimp.min.js"></script>
   <script src="vendors/mail-script.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/functions.js"></script>
+  <script src="js/productos.js"></script>
+  <script src="js/controlador.js"></script>
 </body>
 
 </html>
