--- a/tracking-order.html
+++ b/tracking-order.html
@@ -83,7 +83,8 @@
       <div class="container">
         <div class="tracking_box_inner">
           <p>
-            Para seguimiento o tracking de tu pedido, por favor introduce tu número de pedido abajo y pulsa el botón de seguimiento de pedido.  En breve recibirás un correo indicando el status de tu pedido en todo momento. 
+            Para seguimiento o tracking de tu pedido, por favor introduce tu número de pedido abajo y pulsa el botón de
+            seguimiento de pedido. En breve recibirás un correo indicando el status de tu pedido en todo momento.
           </p>
           <form class="row tracking_form" action="#" method="post" novalidate="novalidate">
             <div class="col-md-12 form-group">
@@ -209,6 +210,9 @@
     <script src="vendors/jquery.ajaxchimp.min.js"></script>
     <script src="vendors/mail-script.js"></script>
     <script src="js/main.js"></script>
+    <script src="js/functions.js"></script>
+    <script src="js/productos.js"></script>
+    <script src="js/controlador.js"></script>
 </body>
 
 </html>
