--- a/blog.html
+++ b/blog.html
@@ -223,7 +223,9 @@
                       <h2>Llegan las mejores ofertas del Black Friday, aprovecha!</h2>
                     </a>
                     <p>
-                      Consulta las mejores ofertas del Black Friday. Cientos de descuentos para toda la familia de hasta  50% en todas nuestras categorías. No te lo pienses más y compra, regala y obtén los mejores artículos.
+                      Consulta las mejores ofertas del Black Friday. Cientos de descuentos para toda la familia de hasta
+                      50% en todas nuestras categorías. No te lo pienses más y compra, regala y obtén los mejores
+                      artículos.
                     </p>
                     <a class="button button-blog" href="single-blog.html">Ver más</a>
                   </div>
@@ -271,7 +273,8 @@
                       <h2>La organización como parte de nuestro éxito.</h2>
                     </a>
                     <p>
-                    Organizar eficientemente todos nuestros productos para que tú los tengas a mano es parte del éxito de 48hrs. Ven y comprueba lo fácil que es encontrar lo que necesitas en nuestra tiendas.
+                      Organizar eficientemente todos nuestros productos para que tú los tengas a mano es parte del éxito
+                      de 48hrs. Ven y comprueba lo fácil que es encontrar lo que necesitas en nuestra tiendas.
                     </p>
                     <a href="single-blog.html" class="button button-blog">Ver más</a>
                   </div>
@@ -319,7 +322,8 @@
                       <h2>Encuentra los mejores regalos</h2>
                     </a>
                     <p>
-                      Tenemos miles de sorpresas para ti y tu familia. Aquí podrás encontrar eso que necesitas o que hará ilusión a los tuyos. 
+                      Tenemos miles de sorpresas para ti y tu familia. Aquí podrás encontrar eso que necesitas o que
+                      hará ilusión a los tuyos.
                     </p>
                     <a href="single-blog.html" class="button button-blog">Ver más</a>
                   </div>
@@ -367,7 +371,8 @@
                       <h2>Cobros en cualquier moneda internacional</h2>
                     </a>
                     <p>
-                      Con nuestra nueva plataforma de cobros no importará si lo quieres hacer en tu moneda nacional o en cualquier otra del mundo. Además aceptamos pagos en Bitcoin y otras monedas virtuales.
+                      Con nuestra nueva plataforma de cobros no importará si lo quieres hacer en tu moneda nacional o en
+                      cualquier otra del mundo. Además aceptamos pagos en Bitcoin y otras monedas virtuales.
                     </p>
                     <a href="single-blog.html" class="button button-blog">Ver más</a>
                   </div>
@@ -415,7 +420,8 @@
                       <h2>Tecnología puntera para que tardes menos en tus compras.</h2>
                     </a>
                     <p>
-                      Aplicamos la tecnología más puntera para que no pases por caja si lo deseas y puedas pagar en nuestros más de 30 puntos libres dentro de la tienda y salir no sea una faena.
+                      Aplicamos la tecnología más puntera para que no pases por caja si lo deseas y puedas pagar en
+                      nuestros más de 30 puntos libres dentro de la tienda y salir no sea una faena.
                     </p>
                     <a href="single-blog.html" class="button button-blog">Ver más</a>
                   </div>
@@ -490,7 +496,8 @@
                 </a>
               </div>
               <p>
-                Recopilo, comento y soy un entusiasta del comercio online. Sigue mis comentarios y publicaciones para mantenerte actualizado, no te pierdas ninguno.
+                Recopilo, comento y soy un entusiasta del comercio online. Sigue mis comentarios y publicaciones para
+                mantenerte actualizado, no te pierdas ninguno.
               </p>
               <div class="br"></div>
             </aside>
@@ -591,7 +598,8 @@
             <aside class="single-sidebar-widget newsletter_widget">
               <h4 class="widget_title">Newsletter</h4>
               <p>
-                Suscribete a nuestro Newsletter y obtén continuamente toda la información de 24hrs. Sólo te tomará un minuto para añadirte al mundo de 48hrs.
+                Suscribete a nuestro Newsletter y obtén continuamente toda la información de 24hrs. Sólo te tomará un
+                minuto para añadirte al mundo de 48hrs.
               </p>
               <div class="form-group d-flex flex-row">
                 <div class="input-group">
@@ -628,7 +636,7 @@
                 </li>
                 <li>
                   <a href="#">Consejos</a>
-                </li>                
+                </li>
               </ul>
             </aside>
           </div>
@@ -760,6 +768,10 @@
   <script src="vendors/jquery.ajaxchimp.min.js"></script>
   <script src="vendors/mail-script.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/functions.js"></script>
+  <script src="js/productos.js"></script>
+  <script src="js/controlador.js"></script>
+
 </body>
 
 </html>
