--- a/register.html
+++ b/register.html
@@ -89,7 +89,7 @@
             <ol class="breadcrumb">
               <li class="breadcrumb-item"><a href="#"></a></li>
               <li class="breadcrumb-item active" aria-current="page"></li>
-                <li><img src="/img/blog/register.jpg" alt="" /></li>
+              <li><img src="/img/blog/register.jpg" alt="" /></li>
             </ol>
           </nav>
         </div>
@@ -269,6 +269,9 @@
   <script src="vendors/jquery.ajaxchimp.min.js"></script>
   <script src="vendors/mail-script.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/functions.js"></script>
+  <script src="js/productos.js"></script>
+  <script src="js/controlador.js"></script>
 </body>
 
 </html>
