feat: Add function addtocart

--- a/category.html
+++ b/category.html
@@ -532,13 +532,13 @@
           <img class="card-img" src="img/product/product1.jpg" alt="" />
           <ul class="card-product__imgOverlay">
             <li>
-              <button><i class="ti-search"></i></button>
+              <button class='remove'><i class="ti-trash"></i></button>
             </li>
             <li>
-              <button><i class="ti-shopping-cart"></i></button>
+              <button class='add'><i class="ti-shopping-cart"></i></button>
             </li>
             <li>
-              <button><i class="ti-heart"></i></button>
+              <button class='like'><i class="ti-heart"></i></button>
             </li>
           </ul>
         </div>
@@ -563,7 +563,7 @@
   <script src="js/main.js"></script>
   <script src="js/functions.js"></script>
   <script src="js/productos.js"></script>
-  <script src="js/controlador.js"></script>
+  <script src="js/controlador-category.js"></script>
 </body>
 
 </html>
