feature create template cards popularity index

--- a/index.html
+++ b/index.html
@@ -172,208 +172,8 @@
             Productos <span class="section-intro__style">en Tendencia</span>
           </h2>
         </div>
-        <div class="row">
-          <div class="col-md-6 col-lg-4 col-xl-3">
-            <div class="card text-center card-product">
-              <div class="card-product__img">
-                <img class="card-img" src="img/product/product1.jpg" alt="" />
-                <ul class="card-product__imgOverlay">
-                  <li>
-                    <button><i class="ti-search"></i></button>
-                  </li>
-                  <li>
-                    <button><i class="ti-shopping-cart"></i></button>
-                  </li>
-                  <li>
-                    <button><i class="ti-heart"></i></button>
-                  </li>
-                </ul>
-              </div>
-              <div class="card-body">
-                <p>Accesorio Deporte</p>
-                <h4 class="card-product__title">
-                  <a href="single-product.html">Smartwatch</a>
-                </h4>
-                <p class="card-product__price">16,99€</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 col-xl-3">
-            <div class="card text-center card-product">
-              <div class="card-product__img">
-                <img class="card-img" src="img/product/product2.jpg" alt="" />
-                <ul class="card-product__imgOverlay">
-                  <li>
-                    <button><i class="ti-search"></i></button>
-                  </li>
-                  <li>
-                    <button><i class="ti-shopping-cart"></i></button>
-                  </li>
-                  <li>
-                    <button><i class="ti-heart"></i></button>
-                  </li>
-                </ul>
-              </div>
-              <div class="card-body">
-                <p>Belleza y Salud</p>
-                <h4 class="card-product__title">
-                  <a href="single-product.html">Colonia After Shave</a>
-                </h4>
-                <p class="card-product__price">4,15€</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 col-xl-3">
-            <div class="card text-center card-product">
-              <div class="card-product__img">
-                <img class="card-img" src="img/product/product3.jpg" alt="" />
-                <ul class="card-product__imgOverlay">
-                  <li>
-                    <button><i class="ti-search"></i></button>
-                  </li>
-                  <li>
-                    <button><i class="ti-shopping-cart"></i></button>
-                  </li>
-                  <li>
-                    <button><i class="ti-heart"></i></button>
-                  </li>
-                </ul>
-              </div>
-              <div class="card-body">
-                <p>Bricolage</p>
-                <h4 class="card-product__title">
-                  <a href="single-product.html">Pegamento Extrafuerte</a>
-                </h4>
-                <p class="card-product__price">2,45€</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 col-xl-3">
-            <div class="card text-center card-product">
-              <div class="card-product__img">
-                <img class="card-img" src="img/product/product4.jpg" alt="" />
-                <ul class="card-product__imgOverlay">
-                  <li>
-                    <button><i class="ti-search"></i></button>
-                  </li>
-                  <li>
-                    <button><i class="ti-shopping-cart"></i></button>
-                  </li>
-                  <li>
-                    <button><i class="ti-heart"></i></button>
-                  </li>
-                </ul>
-              </div>
-              <div class="card-body">
-                <p>Alimentación</p>
-                <h4 class="card-product__title">
-                  <a href="single-product.html">Galletas Nocilla</a>
-                </h4>
-                <p class="card-product__price">2,99€</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 col-xl-3">
-            <div class="card text-center card-product">
-              <div class="card-product__img">
-                <img class="card-img" src="img/product/product5.jpg" alt="" />
-                <ul class="card-product__imgOverlay">
-                  <li>
-                    <button><i class="ti-search"></i></button>
-                  </li>
-                  <li>
-                    <button><i class="ti-shopping-cart"></i></button>
-                  </li>
-                  <li>
-                    <button><i class="ti-heart"></i></button>
-                  </li>
-                </ul>
-              </div>
-              <div class="card-body">
-                <p>Belleza y Salud</p>
-                <h4 class="card-product__title">
-                  <a href="single-product.html">Gel Higienizante De Manos</a>
-                </h4>
-                <p class="card-product__price">2,18€</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 col-xl-3">
-            <div class="card text-center card-product">
-              <div class="card-product__img">
-                <img class="card-img" src="img/product/product6.jpg" alt="" />
-                <ul class="card-product__imgOverlay">
-                  <li>
-                    <button><i class="ti-search"></i></button>
-                  </li>
-                  <li>
-                    <button><i class="ti-shopping-cart"></i></button>
-                  </li>
-                  <li>
-                    <button><i class="ti-heart"></i></button>
-                  </li>
-                </ul>
-              </div>
-              <div class="card-body">
-                <p>Hogar</p>
-                <h4 class="card-product__title">
-                  <a href="single-product.html">Servilletas de Papel</a>
-                </h4>
-                <p class="card-product__price">0,65€</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 col-xl-3">
-            <div class="card text-center card-product">
-              <div class="card-product__img">
-                <img class="card-img" src="img/product/product7.jpg" alt="" />
-                <ul class="card-product__imgOverlay">
-                  <li>
-                    <button><i class="ti-search"></i></button>
-                  </li>
-                  <li>
-                    <button><i class="ti-shopping-cart"></i></button>
-                  </li>
-                  <li>
-                    <button><i class="ti-heart"></i></button>
-                  </li>
-                </ul>
-              </div>
-              <div class="card-body">
-                <p>Hogar</p>
-                <h4 class="card-product__title">
-                  <a href="single-product.html">Spray Cleaner</a>
-                </h4>
-                <p class="card-product__price">0,99€</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 col-xl-3">
-            <div class="card text-center card-product">
-              <div class="card-product__img">
-                <img class="card-img" src="img/product/product8.jpg" alt="" />
-                <ul class="card-product__imgOverlay">
-                  <li><button><i class="ti-search"></i></button></li>
-                  <li><button><i class="ti-shopping-cart"></i></button></li>
-                  <li><button><i class="ti-heart"></i></button></li>
-                </ul>
-              </div>
-              <div class="card-body">
-                <p>Jardinería</p>
-                <h4 class="card-product__title">
-                  <a href="single-product.html">Maceta de riego automático</a>
-                </h4>
-                <p class="card-product__price">3,60€</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-4 col-xl-3">
-            <div class="card text-center card-product">
-              <div class="card-product__img">
-              </div>
-            </div>
-          </div>
-        </div>
+        <div class="row" id="cards">
+        </div>   
       </div>
     </section>
     <!-- ================ trending product section end ================= -->
@@ -819,6 +619,33 @@
     </div>
   </footer>
   <!--================ End footer Area  =================-->
+  <template id="template-card">
+    <div class="col-md-6 col-lg-4">
+      <div class="card text-center card-product">
+        <div class="card-product__img">
+          <img class="card-img" src="img/product/product1.jpg" alt="" />
+          <ul class="card-product__imgOverlay">
+            <li>
+              <button class='remove'><i class="ti-trash"></i></button>
+            </li>
+            <li>
+              <button class='add'><i class="ti-shopping-cart"></i></button>
+            </li>
+            <li>
+              <button class='like'><i class="ti-heart"></i></button>
+            </li>
+          </ul>
+        </div>
+        <div class="card-body">
+          <p>Accesorio Deporte</p>
+          <h4 class="card-product__title">
+            <a href="#">Smartwatch</a>
+          </h4>
+          <p class="card-product__price">16,99</p>
+        </div>
+      </div>
+    </div>
+  </template>
 
   <script src="vendors/jquery/jquery-3.2.1.min.js"></script>
   <script src="vendors/bootstrap/bootstrap.bundle.min.js"></script>
@@ -830,7 +657,7 @@
   <script src="js/main.js"></script>
   <script src="js/functions.js"></script>
   <script src="js/productos.js"></script>
-  <script src="js/controlador.js"></script>
+  <script src="js/controlador-index.js"></script>
 </body>
 
 </html>
