feat: add local data persistence

--- a/category.html
+++ b/category.html
@@ -564,6 +564,7 @@
   <script src="js/functions.js"></script>
   <script src="js/productos.js"></script>
   <script src="js/controlador-category.js"></script>
+  <script src="js/notify.js"></script>
 </body>
 
 </html>
