--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
           </h2>
         </div>
         <div class="row" id="cards">
-        </div>   
+        </div>
       </div>
     </section>
     <!-- ================ trending product section end ================= -->
@@ -658,6 +658,7 @@
   <script src="js/functions.js"></script>
   <script src="js/productos.js"></script>
   <script src="js/controlador-index.js"></script>
+  <script src="js/notify.js"></script>
 </body>
 
 </html>
