--- a/cart.html
+++ b/cart.html
@@ -430,7 +430,7 @@
   <script src="js/main.js"></script>
   <script src="js/functions.js"></script>
   <script src="js/productos.js"></script>
-  <script src="js/controlador.js"></script>
+  <script src="js/notify.js"></script>
 </body>
 
 </html>
