--- a/register.html
+++ b/register.html
@@ -272,6 +272,7 @@
   <script src="js/functions.js"></script>
   <script src="js/productos.js"></script>
   <script src="js/controlador.js"></script>
+  <script src="js/notify.js"></script>
 </body>
 
 </html>
