--- a/tracking-order.html
+++ b/tracking-order.html
@@ -213,6 +213,7 @@
     <script src="js/functions.js"></script>
     <script src="js/productos.js"></script>
     <script src="js/controlador.js"></script>
+    <script src="js/notify.js"></script>
 </body>
 
 </html>
